--- a/WEB/races/pom.xml
+++ b/WEB/races/pom.xml
@@ -19,7 +19,7 @@
 
 	<modules>
 		<module>data</module>
-		<module>services</module>
+		<module>service</module>
 		<module>webapp</module>
 	</modules>
 
@@ -33,7 +33,7 @@
 			</dependency>
 			<dependency>
 				<groupId>by.training.java.grodno.az</groupId>
-				<artifactId>services</artifactId>
+				<artifactId>service</artifactId>
 				<version>1.0.0</version>
 			</dependency>
 			<dependency>
@@ -41,8 +41,6 @@
 				<artifactId>webapp</artifactId>
 				<version>1.0.0</version>
 			</dependency>
-
-
 			<dependency>
 				<groupId>org.springframework</groupId>
 				<artifactId>spring-core</artifactId>
@@ -68,11 +66,6 @@
 				<artifactId>spring-context-support</artifactId>
 				<version>${spring.version}</version>
 			</dependency>
-
-
-
-
-
 		</dependencies>
 	</dependencyManagement>
 
@@ -89,12 +82,6 @@
 			<id>spring-maven-external</id>
 			<name>Springframework Maven External Repository</name>
 			<url>http://repo.springsource.org/libs-release-remote/</url>
-		</repository>
-		<repository>
-			<id>java-net</id>
-			<name>Java.net Repository for Maven</name>
-			<url>http://download.java.net/maven/2/</url>
-			<layout>default</layout>
 		</repository>
 	</repositories>
 
