--- a/WEB/races/services/pom.xml
+++ b/WEB/races/services/pom.xml
@@ -2,16 +2,14 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>by.training.java.grodno.az</groupId>
+	<groupId>by.training.java.grodno.az</groupId>
 		<artifactId>parent-project</artifactId>
 		<version>1.0.0</version>
 	</parent>
 
-
-	<artifactId>services</artifactId>
+	<artifactId>service</artifactId>
 
 	<packaging>jar</packaging>
-
 
 	<dependencies>
 		<dependency>
