--- a/WEB/web-races/service/pom.xml
+++ b/WEB/web-races/service/pom.xml
@@ -16,6 +16,16 @@
 			<groupId>by.training.java.grodno.az</groupId>
 			<artifactId>data</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+		</dependency>
+
 	</dependencies>
 
 </project>
