--- a/WEB/web-races/data/src/main/resources/app.properties
+++ b/WEB/web-races/data/src/main/resources/app.properties
@@ -1,6 +1,6 @@
 jdbc.driver=com.mysql.jdbc.Driver
-_jdbc.url=jdbc:mysql://localhost:3306/races
-jdbc.url=jdbc:mysql://localhost:3306/test
+jdbc.url=jdbc:mysql://localhost:3306/races
+_jdbc.url=jdbc:mysql://localhost:3306/test
 jdbc.username=root
 jdbc.password=135246
 
