--- a/WEB/web-races/data/pom.xml
+++ b/WEB/web-races/data/pom.xml
@@ -71,6 +71,12 @@
 			<groupId>commons-codec</groupId>
 			<artifactId>commons-codec</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-web</artifactId>
+		</dependency>
+
 	</dependencies>
 
 </project>
