--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 *.project
 *.prefs
 *.bak
+*.settings*
 SE_01/task_6/doc/package-list
 SE_02/task_2/.idea/compiler.xml
 SE_02/task_2/.idea/copyright/profiles_settings.xml
