--- a/WEB/web-races/pom.xml
+++ b/WEB/web-races/pom.xml
@@ -159,6 +159,12 @@
 				<version>${wicket.version}</version>
 			</dependency>
 
+			<dependency>
+				<groupId>com.googlecode.wicket-jquery-ui</groupId>
+				<artifactId>wicket-kendo-ui</artifactId>
+				<version>${wicket.version}</version>
+			</dependency>
+
 			<!-- JETTY DEPENDENCIES FOR TESTING -->
 			<dependency>
 				<groupId>org.eclipse.jetty</groupId>
